# CropSpot

./: .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  clearml.conf  config.txt  model.ipynb  model_selection.ipynb  model_v0.ipynb  my-deploy-key  my-deploy-key.pub  pyproject.toml  requirements.txt  sagemaker_requirements.txt
.github/workflows/: github-actions-demo.yml  github-actions.yml
Controller/: __main__.py  cnn_train.py  compare_models.py  data_pipeline.py  densenet_train.py  model_evaluation.py  model_training.py  pipeline.py  pipeline_v2.py  pipeline_v3.py  preprocess_data.py  preprocess_uploaded_data.py  requirements.txt  resnet_train.py  simple_pipeline.py  update_model.py  upload_data.py  vgg_train.py
Controller/cropspot/: data_pipeline.py  preprocess_uploaded_data.py
Docs/: SageMaker Initiation.txt
Model/Controller/: model_training.py  preprocess_data.py  upload_data.py
Model/Data/: clean.py  preprocess.py  utils.py
flaskapp/: app.py
flaskapp/static/: script.js  styles.css
flaskapp/templates/: index.html
sagemaker_env/: pyvenv.cfg
sagemaker_env/Scripts/: activate  activate.bat
