[tool.poetry]
name = "cropspot"
version = "0.1.0"
description = ""
authors = ["Farhan Momin <farhan.m.nafis2412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = {version = "2.10", extras = ["and-cuda"]}
tensorflow-io-gcs-filesystem = "0.27.0"
clearml = "^1.15.1"
clearml-agent = "^1.8.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
tqdm = "^4.66.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
